testsuite/tests/typecheck/should_fail/T16829a.stderr

T16829a.hs:9:1: error:
    • Newtype has non-* return kind ‘TYPE 'IntRep’
    • In the newtype declaration for ‘T’
    Suggested fix: Perhaps you intended to use UnliftedNewtypes
